# Kompositum

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: cmake.yml
include/kompositum/: builder.h  component.h  composite.h  fwd.h  leaf.h  printer.h  root.h  visitor.h
source/: component.h  composite.h  fwd.h  leaf.h  main.cpp  util.h
test/: CMakeLists.txt  basic.cpp
